GNOME Bugzilla – Bug 702174
mpegvideoparse: Crash while transcoding to MPEG2 with encodebin while attaching parse meta
Last modified: 2013-06-14 14:45:10 UTC
Created attachment 246715 [details] Sample code This happens while trying to transcode to MPEG2/MP2 in MPEG-TS; I tested it with H.264/AAC in ISO mp4 and WEBM. To reproduce, use attached sample program.
+ Trace 232042
Hrm, bugzilla combined the two stacktraces. Here's the second one
+ Trace 232043
This should fix it, please test. commit f8bc1922b5bdb8c3aab9c7d97f31ea150ffa33f4 Author: Sebastian Dröge <slomo@circular-chaos.org> Date: Fri Jun 14 14:52:07 2013 +0200 mpegvideoparse: Make sure the buffer is writable before we add the MPEG vide https://bugzilla.gnome.org/show_bug.cgi?id=702174
Yes, works again, thanks.