mpegvideoparse: Make sure the buffer is writable before we add the MPEG video meta

https://bugzilla.gnome.org/show_bug.cgi?id=702174